--- a/shopbackend/pom.xml
+++ b/shopbackend/pom.xml
@@ -1,13 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>net.kzn</groupId>
-  <artifactId>onlineshopping</artifactId>
-  <packaging>war</packaging>
+
+  <groupId>net</groupId>
+  <artifactId>shopbackend</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-  <name>onlineshopping Maven Webapp</name>
+  <packaging>jar</packaging>
+
+  <name>shopbackend</name>
   <url>http://maven.apache.org</url>
-  
+
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+
+  <dependencies>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -15,7 +22,4 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
-  <build>
-    <finalName>onlineshopping</finalName>
-  </build>
 </project>
